[gd_scene load_steps=2 format=3 uid="uid://paaf68akbay4"]

[ext_resource type="Script" path="res://src/Tile/WastesAnimator.gd" id="1_6x7aa"]

[node name="WastesAnimator" type="Node2D"]
script = ExtResource("1_6x7aa")

[node name="WaterfallTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="GrassTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="WaterfallTimer" to="." method="_on_WaterfallTimer_timeout"]
[connection signal="timeout" from="GrassTimer" to="." method="_on_GrassTimer_timeout"]
